# codeviz

./: .gitignore  README.md  test_project.html  todo.md
.claude/commands/: review-project.md  verify.md
Doc/: system.drawio
codeviz/: .gitignore  CHANGES.md  CLAUDE.md  CMakeLists.txt  README.md  build.sh  deploy.sh
codeviz/.claude/commands/: review-project.md
codeviz/Doc/: 00_prd.md  03_data_types.md  05_unit-test.md  Code_Visualization_Tool_Design_Spec.md  architecture.md  example.md  prd.md  tech_selection.md  test_prompt.md
codeviz/Doc/backup/: spec.md.save
codeviz/Doc/modules/: analyzer.md  cli.md  cmake_parser.md  compdb_parser.md  graph_builder.md  indexer.md  parser.md  reporter.md
codeviz/Doc/prompt/: system_prompt.md  task_prompt.md
codeviz/Src/: CMakeLists.txt  main.cpp
codeviz/Src/Analyzer/: Analyzer.cpp  Analyzer.h
codeviz/Src/CLI/: CLI.cpp  CLI.h
codeviz/Src/CMakeParser/: CMakeParser.cpp  CMakeParser.h
codeviz/Src/Common/: DataTypes.h
codeviz/Src/CompDBParser/: CompDBParser.cpp  CompDBParser.h
codeviz/Src/GraphBuilder/: GraphBuilder.cpp  GraphBuilder.h
codeviz/Src/Indexer/: Indexer.cpp  Indexer.h
codeviz/Src/Parser/: ParserFrontend.cpp  ParserFrontend.h
codeviz/Src/Reporter/: Reporter.cpp  Reporter.h
codeviz/Src/Template/: cytoscape_bridge.js  template.html
codeviz/Test/: CMakeLists.txt  test_analyzer.cpp  test_cli.cpp  test_cmake_parser.cpp  test_compdb_parser.cpp  test_graph_builder.cpp  test_indexer.cpp  test_main.cpp  test_parser.cpp  test_reporter.cpp
extra-tool/: check_sync.py
html_output/: codeviz_report.html
test_project/: CMakeLists.txt  config.cpp  config.h  logger.cpp  logger.h  main.cpp  utils.cpp  utils.h
test_project/common/: types.cpp  types.h
test_project/handler/: base_handler.cpp  base_handler.h  http_handler.cpp  http_handler.h
test_project/html_output/: codeviz_test_report.html
